--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,11 +1,16 @@
 div {
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
     display: inline-block;
     border: 2px solid black;
-    border-radius: 50px;
-    margin: 5%;
+    border-radius: 100px;
+    margin: 3%;
     text-align: center;
+}
+
+div:hover {
+    box-shadow: 5px 5px 15px 5px #000000;
+
 }
 
 body {
@@ -13,14 +18,14 @@ body {
 }
 
 div:nth-of-type(1) {
-    background-color: green;
-}
+    background: linear-gradient(45deg, green 0% 50%,green 50%,purple 50%,purple 100%);}
 div:nth-of-type(2) {
-    background-color: purple;
+    background: linear-gradient(45deg, purple 0% 50%,purple 50%,yellow 50%,yellow 100%);
 }
+
+
 div:nth-of-type(3) {
-    background-color: black;
-}
+    background: linear-gradient(45deg, black 0% 50%,black 50%,orange 50%,orange 100%);}
+
 div:nth-of-type(4) {
-    background-color: darkblue;
-}
+    background: linear-gradient(45deg, darkblue 0% 50%,darkblue 50%,blue 50%,blue 100%);}
